<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FlagsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/switzerland" />

            <FrameLayout
                android:layout_width="270dp"
                android:layout_height="180dp"
                android:background="@color/gray"
                android:orientation="vertical"
                android:padding="16dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/red" />

                <View
                    android:layout_width="40dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:background="@color/white" />

                <View
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@color/white" />


            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/denmark" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="270dp"
                android:layout_height="180dp"
                android:background="@color/gray"
                android:orientation="vertical"
                android:padding="16dp">

                <View
                    android:id="@+id/view4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view9"
                    android:layout_width="150dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="24dp"
                    android:background="@color/red"
                    app:layout_constraintBottom_toTopOf="@+id/view10"
                    app:layout_constraintEnd_toEndOf="@+id/view4"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view10"
                    android:layout_width="150dp"
                    android:layout_height="0dp"
                    android:background="@color/red"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/view4"
                    app:layout_constraintTop_toBottomOf="@+id/view9"
                    app:layout_constraintVertical_bias="0.0" />

                <View
                    android:id="@+id/view6"
                    android:layout_width="65dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="24dp"
                    android:background="@color/red"
                    app:layout_constraintBottom_toTopOf="@+id/view5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view5"
                    android:layout_width="65dp"
                    android:layout_height="0dp"
                    android:background="@color/red"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view6" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/austria" />

            <LinearLayout
                android:layout_width="270dp"
                android:layout_height="180dp"
                android:background="@color/gray"
                android:orientation="vertical"
                android:padding="16dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.33"
                    android:background="@color/red" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.33"
                    android:background="@color/white" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.33"
                    android:background="@color/red" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/poland" />

            <FrameLayout
                android:layout_width="270dp"
                android:layout_height="180dp"
                android:background="@color/gray"
                android:orientation="vertical"
                android:padding="16dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="74dp"
                    android:background="@color/red" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="74dp"
                    android:layout_marginTop="74dp"
                    android:background="@color/white" />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/madagascar" />

            <LinearLayout
                android:layout_width="270dp"
                android:layout_height="180dp"
                android:background="@color/gray"
                android:orientation="horizontal"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@color/red" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@color/green" />

                </LinearLayout>


            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/italy" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="270dp"
                android:layout_height="180dp"
                android:background="@color/gray"
                android:orientation="vertical"
                android:padding="16dp">

                <View
                    android:id="@+id/view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/green"
                    app:layout_constraintEnd_toStartOf="@+id/view2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/view3"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/view"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/red"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/view2"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/columbia" />

            <LinearLayout
                android:layout_width="270dp"
                android:layout_height="180dp"
                android:background="@color/gray"
                android:orientation="vertical"
                android:padding="16dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.33"
                    android:background="@color/yellow" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.33"
                    android:background="@color/blue" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.33"
                    android:background="@color/red" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/thailand" />

            <FrameLayout
                android:layout_width="270dp"
                android:layout_height="180dp"
                android:background="@color/gray"
                android:orientation="vertical"
                android:padding="16dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:background="@color/red" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_marginTop="24dp"
                    android:background="@color/white" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="48dp"
                    android:background="@color/blue" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_marginTop="96dp"
                    android:background="@color/white" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_marginTop="120dp"
                    android:background="@color/red" />


            </FrameLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>